--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* General */
 body {
 	text-align: center;
 	font-family: sans-serif;
@@ -34,9 +35,44 @@ button:hover {
 
 
 /* Buttons */
+.animate {
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
+}
+.action-button {
+	position: relative;
+	padding: 10px 9%;
+	margin: 1px 10px 10px 0px;
+	float: left;
+	border-radius: 8px;
+	font-size: 22px;
+	letter-spacing: 1px;
+	color: #FFF;
+	text-decoration: none;
+	left: 15px;	
+}
+.green {
+	background-color: #14E622;
+	border-bottom: 2px solid #669644;
+	text-shadow: 0px -2px #669644;
+}
+.action-button {
+	&:active {
+		transform: translate(0px, 2px);
+ 		-webkit-transform: translate(0px, 2px);
+		border-bottom: 0px solid #669644;
+	}
+	&:hover {
+		background-color: #14E622;
+		border-bottom: 2px solid #669644;
+		text-shadow: 0px -2px #669644;
+		color: #fff;
+	}
+}
+
 .ready {
 	height: 52px;
-	width: 16%;
+	width: 210px;
 	font-size: 30px;
 }
 
@@ -72,4 +108,21 @@ button:hover {
 
 .hide {
 	display: none;
+}
+
+
+
+/* Media Queries */
+@media (max-width: 554px) {
+	.after-math img {
+		width: 90%;
+	}
+	.throw-button {
+		width: 126px;
+		display: block;
+		margin: 0 auto 15px auto;
+	}
+	button:last-of-type {
+		margin-right: auto;
+	}
 }
