--- a/css/styles.css
+++ b/css/styles.css
@@ -14,24 +14,6 @@ h2 {
 	margin-bottom: 25px;
 }
 
-button {
-	height: 35px;
-	width: 8%;
-	border-radius: 12px;
-	color: white;
-	background-color: rgb(146, 164, 192);
-	margin-right: 20px;
-	font-size: 20px;
-}
-
-button:last-of-type {
-	margin-right: 0px;
-}
-
-button:hover {
-	cursor: pointer;
-}
-
 
 
 /* Buttons */
@@ -39,45 +21,55 @@ button:hover {
 	transition: all 0.1s;
 	-webkit-transition: all 0.1s;
 }
+
 .action-button {
 	position: relative;
-	padding: 10px 9%;
-	margin: 1px 10px 10px 0px;
-	float: left;
-	border-radius: 8px;
-	font-size: 22px;
-	letter-spacing: 1px;
+	cursor: pointer;
+	padding: 10px 40px;
+  	margin: 0px 10px 10px 0px;
+	border-radius: 10px;
+	font-size: 25px;
 	color: #FFF;
 	text-decoration: none;
-	left: 15px;	
-}
-.green {
-	background-color: #14E622;
-	border-bottom: 2px solid #669644;
-	text-shadow: 0px -2px #669644;
-}
-.action-button {
-	&:active {
-		transform: translate(0px, 2px);
- 		-webkit-transform: translate(0px, 2px);
-		border-bottom: 0px solid #669644;
-	}
-	&:hover {
-		background-color: #14E622;
-		border-bottom: 2px solid #669644;
-		text-shadow: 0px -2px #669644;
-		color: #fff;
-	}
+	display: inline-block;
+	width: 124px;	
 }
 
-.ready {
-	height: 52px;
-	width: 210px;
-	font-size: 30px;
+.blue {
+	background-color: #3498DB;
+	border-bottom: 5px solid #2980B9;
+	text-shadow: 0px -2px #2980B9;
+}
+
+.red {
+	background-color: #E74C3C;
+	border-bottom: 5px solid #BD3E31;
+	text-shadow: 0px -2px #BD3E31;
+}
+
+.green {
+	background-color: #82BF56;
+	border-bottom: 5px solid #669644;
+	text-shadow: 0px -2px #669644;
+}
+
+.yellow {
+	background-color: #F2CF66;
+	border-bottom: 5px solid #D1B358;
+	text-shadow: 0px -2px #D1B358;
+}
+
+.action-button:active {
+	transform: translate(0px,5px);
+  	-webkit-transform: translate(0px,5px);
+	border-bottom: 1px solid;
+}
+
+a:last-of-type {
+	margin-right: 0px;
 }
 
 .reset {
-	width: 198px;
 	margin-top: 10px;
 	display: none;
 }
@@ -96,7 +88,7 @@ button:hover {
 .after-math img {
 	width: 512px;
 	display: block;
-	margin: 0 auto 20px auto;
+	margin: 0 auto 36px auto;
 }
 
 
